k8s/yolo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: yoloapi.sachinms.fyi
      http:
        paths:
          - path: /notification/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification
                port:
                  number: 9000
          - path: /admin/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 7300
          - path: /users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users
                port:
                  number: 7100
          - path: /posts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts
                port:
                  number: 7000
          - path: /messaging/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: messaging
                port:
                  number: 8000
